2005-08-17  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Add dependency information for all instructions.

2005-07-30  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

Wed Jul 20 18:01:54 BST 2005 Paolo Molaro <lupus@ximian.com>

	* arm/*: more codegen macros.

2005-07-18  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h (ia64_is_adds_imm): Ongoing IA64 work.

2005-06-23  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Add some new pseudo ops.

2005-06-19  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Fix encoding of ia64_fclass.

2005-06-12  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-06-09  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-30  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/codegen.c: Fix it after latest changes.

2005-05-29  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.
	
	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-28  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.
	
	* ia64/ia64-codegen.h: Ongoing IA64 work.

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-26  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-22  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.
	
	* ia64/ia64-codegen.h: Ongoing IA64 work.

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-21  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-19  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h ia64/codegen.c: Ongoing ia64 work.

2005-05-18  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h (ia64_codegen_init): Rename macro parameter.

2005-05-14  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am: Only compile libmonoarch if the interpreter is compiled.

	* ia64/ia64-codegen.h: Add IA64 code generation macros.
