@@ -1,3 +1,7 @@
+2005-08-21  Zoltan Varga  <vargaz@freemail.hu>
+
+	* ia64/ia64-codegen.h: Improve ins scheduling and fix some bugs.
+
 2005-08-17  Zoltan Varga  <vargaz@freemail.hu>
 
 	* ia64/ia64-codegen.h: Add dependency information for all instructions.
